| Summary: | ASTERISK-28585: ari/resource_events: Crash in event session cleanup | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2019-10-14 11:41:24 | Date Closed: | 2019-10-29 09:37:01 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 17.0.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) archive.zip ( 1) backtrace_10032.txt | |
| Description: | Jenkins caught a crash on shutdown when running the following test:
tests/rest_api/channels/redirect/nominal | ||
| Comments: | By: Friendly Automation (friendly-automation) 2019-10-29 09:37:03.125-0500 Change 13103 merged by Friendly Automation: res_ari_events: Add module reference when a WebSocket is open. [https://gerrit.asterisk.org/c/asterisk/+/13103|https://gerrit.asterisk.org/c/asterisk/+/13103] By: Friendly Automation (friendly-automation) 2019-10-29 09:40:08.677-0500 Change 13105 merged by Friendly Automation: res_ari_events: Add module reference when a WebSocket is open. [https://gerrit.asterisk.org/c/asterisk/+/13105|https://gerrit.asterisk.org/c/asterisk/+/13105] By: Friendly Automation (friendly-automation) 2019-10-29 09:46:23.255-0500 Change 13104 merged by Friendly Automation: res_ari_events: Add module reference when a WebSocket is open. [https://gerrit.asterisk.org/c/asterisk/+/13104|https://gerrit.asterisk.org/c/asterisk/+/13104] By: Friendly Automation (friendly-automation) 2019-10-29 10:28:07.070-0500 Change 13106 merged by Joshua Colp: res_ari_events: Add module reference when a WebSocket is open. [https://gerrit.asterisk.org/c/asterisk/+/13106|https://gerrit.asterisk.org/c/asterisk/+/13106] | ||